@@ -36,6 +36,7 @@ Player::Player(const PlayerId& _id, TeamColor _team,
 		const char* name, const char* _email) :
 				notResponding(false),
 				hunted(false),
+				autoPilot(false),
 				id(_id),
 				team(_team),
 				flag(Flags::Null),
